Fix a visible white box inside the form_select_user selected choice

--- a/themes/templates/default.less
+++ b/themes/templates/default.less
@@ -1012,7 +1012,6 @@ ul > li {
     .select2-search-choice {
         box-shadow: inset 0 0 0 1.1em #f0f2f4;
         border: 0;
-        background: 0;
         padding-left: .5rem;
         display: flex;
         gap: .5rem;
